[package]
name = "chroma-ls"
version = "1.0.0"
edition = "2024"
authors = ["skewb1k <skewb1kunix@gmail.com>"]
description = "LSP server for highlighting colors in source files"
license = "MIT"
repository = "https://github.com/skewb1k/chroma-ls"

[dependencies]
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp-server = "0.23"
